syntax = "proto3";

package feed;


service Feed {
  rpc CreateStore(CreateStoreRequest) returns (CreateStoreResponse) {}
  rpc DeleteStore(DeleteStoreRequest) returns (DeleteStoreResponse) {}

  rpc GetPage(GetPageRequest) returns (GetPageResponse) {}
  
  rpc DeleteByIDs(DeleteByIDsRequest) returns (DeleteByIDsResponse) {}

  rpc SetItems(SetItemsRequest) returns (SetItemsResponse) {}

  rpc ListSources(ListSourcesRequest) returns (ListSourcesResponse) {}
  rpc AddSource(Source) returns (AddSourceResponse) {}
  rpc DeleteSource(Source) returns (DeleteSourceResponse) {}
  
  rpc ListPromotions(ListPromotionsRequest) returns (ListPromotionsResponse) {}
  rpc AddPromotion(Promotion) returns (AddPromotionResponse) {}
  rpc DeletePromotion(Promotion) returns (DeletePromotionResponse) {}
}

message CreateStoreRequest {
}

message CreateStoreResponse {
}

message DeleteStoreRequest {
}

message DeleteStoreResponse {
}

message GetPageRequest {
  enum Gender {
    ALL = 0;
    WOMEN = 1;
    MEN = 2;
  }
  int32 nb = 1;
  int32 size = 2;
  Gender gender = 3;
}

message GetPageResponse {
  bytes records = 1;
}

message ListPromotionsRequest {
}

message ListPromotionsResponse {
  bytes records = 1;
}

message Promotion {
  string product_id = 1;
  string image_url = 2;
  int32 position = 3;
  string name = 4;
}

message AddPromotionResponse {
}

message DeletePromotionResponse {
}

message SetItemsRequest {
  string id = 1;
  repeated string item_ids = 2;
}

message SetItemsResponse {
}

message DeleteByIDsRequest {
  repeated string ids = 1;
}

message DeleteByIDsResponse {
}

message Source {
  string type = 1;
  string url = 2;
}

message AddSourceResponse {
}

message DeleteSourceResponse {
}

message ListSourcesRequest {
}

message ListSourcesResponse {
  repeated Source sources = 1;
}
